# Moppy2

./: .gitignore
.github/workflows/: publish.yml
Java/MoppyAPI/: Dockerfile  README.md  build.gradle  docker-compose.yml  mise.toml  openapi.yaml  settings.gradle
Java/MoppyAPI/src/main/java/com/moppy/api/: MoppyAPIServer.java  NetworkManager.java  PlaybackService.java  PlaybackState.java
Java/MoppyCLI/: README.md  build.gradle  settings.gradle
Java/MoppyCLI/src/main/java/com/moppy/cli/: MoppyCLI.java
Java/MoppyCLI/src/main/java/com/moppy/cli/commands/: DevicesCommand.java  PlayCommand.java  TestCommand.java
Java/MoppyCLI/src/main/java/com/moppy/cli/network/: CLINetworkManager.java
Java/MoppyCLI/src/main/java/com/moppy/cli/player/: CLIMIDIPlayer.java
Java/MoppyCLI/src/main/java/com/moppy/cli/util/: ConsoleProgressBar.java
RaspPi/moppy_buttons/: .dockerignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
RaspPi/moppy_buttons/moppy_buttons/: __init__.py  api_client.py  button_handler.py  config.py  gpio_controller.py  interfaces.py  logger.py  main.py
Web/moppy-web/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
Web/moppy-web/components/: MoppyControl.tsx
Web/moppy-web/lib/: api.ts
Web/moppy-web/src/app/: globals.css  layout.tsx  page.tsx
Web/moppy-web/src/app/api/moppy/[...path]/: route.ts
